TRIBITS_PACKAGE(Gtest)

SET(${PACKAGE_NAME}_SKIP_INSTALL FALSE CACHE BOOL
  "Set to TRUE to skip the install of Gtest header and library")

IF (${PACKAGE_NAME}_SKIP_INSTALL)
  SET(Gtest_NO_INSTALL_LIB_OR_HEADERS_ARG NO_INSTALL_LIB_OR_HEADERS CACHE INTERNAL "")
ELSE()
  SET(Gtest_NO_INSTALL_LIB_OR_HEADERS_ARG CACHE INTERNAL "")
ENDIF()

add_subdirectory(googletest)

TRIBITS_PACKAGE_POSTPROCESS()
