
INCLUDE(TribitsAddAdvancedTest)


IF (PYTHON_EXECUTABLE)

  TRIBITS_ADD_ADVANCED_TEST( GeneralScriptSupport_UnitTests
    OVERALL_WORKING_DIRECTORY TEST_NAME
    TEST_0 CMND ${PYTHON_EXECUTABLE} 
      ARGS ${CMAKE_CURRENT_SOURCE_DIR}/GeneralScriptSupport_UnitTests.py -v
      PASS_REGULAR_EXPRESSION "OK"
    )

  IF(${PROJECT_NAME}_ENABLE_DEVELOPMENT_MODE)
    TRIBITS_ADD_ADVANCED_TEST( TribitsPackageFilePathUtils_UnitTests
      OVERALL_WORKING_DIRECTORY TEST_NAME
      TEST_0 CMND ${PYTHON_EXECUTABLE} 
        ARGS ${CMAKE_CURRENT_SOURCE_DIR}/TribitsPackageFilePathUtils_UnitTests.py -v
        PASS_REGULAR_EXPRESSION "OK"
      )
  ENDIF()

  TRIBITS_ADD_ADVANCED_TEST( CheckinTest_UnitTests
    OVERALL_WORKING_DIRECTORY TEST_NAME
    TEST_0 CMND ${PYTHON_EXECUTABLE} 
      ARGS ${CMAKE_CURRENT_SOURCE_DIR}/CheckinTest_UnitTests.py
        --with-cmake="${CMAKE_COMMAND}"
        -v
      PASS_REGULAR_EXPRESSION "OK"
    )

  TRIBITS_ADD_ADVANCED_TEST( InstallProgramDriver_UnitTests
    OVERALL_WORKING_DIRECTORY TEST_NAME
    TEST_0 CMND ${PYTHON_EXECUTABLE} 
      ARGS ${CMAKE_CURRENT_SOURCE_DIR}/InstallProgramDriver_UnitTests.py -v
      PASS_REGULAR_EXPRESSION "OK"
    )

  ADD_SUBDIRECTORY(UnitTests)

ENDIF()
